--- a/JS/TODO/Basic01/css/style.css
+++ b/JS/TODO/Basic01/css/style.css
@@ -3,22 +3,34 @@
   padding: 0;
 }
 
+body {
+  font-family: 'Noto Serif KR', serif;
+}
+
 .wrapper {
-  height: 100vh;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 500px;
+  border: 1px solid #283048;
+  border-radius: 10px;
+  overflow: auto;
 }
 
 .header {
   display: flex;
-  /* flex-direction: row; 생략 가능*/
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
   color: #fff;
-  background: linear-gradient(5deg, #0052D4, #4364F7, #6FB1FC);
-  /* linear-gradient(방향, 색상1, 색상2) 방향은 생략 가능 */
+  background: #283048;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #859398, #283048);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #859398, #283048); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .allDelete {
@@ -41,6 +53,7 @@
   padding: 1rem;
   display: flex;
   align-items: center;
+  line-height: 1.8em;
 }
 
 .todo-like {
@@ -49,7 +62,7 @@
 }
 
 .todo-item {
-  flex: 8;
+  flex: 10;
 }
 
 .done .todo-item {
@@ -64,7 +77,7 @@
 .todo-manage {
   flex: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .like {
