--- a/React/shop/src/Detail/Detail.scss
+++ b/React/shop/src/Detail/Detail.scss
@@ -1,3 +1,12 @@
+.wow-enter {
+  opacity: 0;
+}
+
+.wow-enter-active {
+  opacity: 1;
+  transition: all 500ms;
+}
+
 @mixin basic() {
   background : #eeeeee;
   padding : 15px;
